# Financial-Analyst

./: .gitignore  Custom_tools.py  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
tmp/: data_shape.py
